# toklens

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  REVIEW.md  REVISION.md  pyproject.toml
examples/: compare_tokenizers.py  custom_text.py  quickstart.py
experiments/: 01_collect_benchmarks.py  02_compute_metrics.py  03_correlation.py  04_figures.py  05_multilingual_correlation.py  06_qtok_compare.py  07_perplexity_modal.py  08_bpb_correlation.py  09_qwen_scaling_modal.py  README.md  bpb_correlation.json  config.py  multilingual_correlations.csv  multilingual_lme_results.csv  multilingual_lme_results.json  perplexity_results.json  qtok_compare.json  run_all.sh  toklens_results.csv  training_tokens.json  validate_metrics.py
experiments/analyses/: 05_multilingual_correlation.py  06_qtok_compare.py  07_perplexity_modal.py  08_bpb_correlation.py  09_qwen_scaling_modal.py
experiments/data/: benchmark_scores.json  correlations.csv  correlations.json  multilingual_correlations.json  qwen_scaling_analysis.json  table_metrics.tex  toklens_results.json
experiments/pipeline/: 01_collect_benchmarks.py  02_compute_metrics.py  03_correlation.py  04_figures.py
experiments/qtok_outputs/: basic_stats.tsv  basic_stats_abs.tsv  cyrillic_stats.tsv  latin_stats.tsv  unicode_stats.tsv
experiments/qtok_tokenizers/glm4_9b/: tokenizer_config.json
paper/latex/: acl_latex.aux  acl_latex.bbl  acl_latex.blg  acl_latex.fdb_latexmk  acl_latex.fls  acl_latex.out  acl_latex.tex  custom.bib  errors-acl.json
src/toklens/: __init__.py  analyzer.py  cli.py  compare.py  corpora.py  metrics.py  report.py
tests/: conftest.py  test_analyzer.py  test_cli.py  test_metrics.py  test_report.py
todos/: 01-project-setup.md  02-core-metrics.md  03-corpora.md  04-analyzer.md  05-compare.md  06-report.md  07-cli.md  08-pypi-publish.md  09-metric-validation.md  10-documentation.md  10-paper.md
