[project]
name = "toklens"
version = "0.1.0"
description = "TokLens: Looking Beyond Fertility in Tokenizer Evaluation"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "guan404ming" }]
keywords = ["tokenizer", "nlp", "evaluation", "multilingual", "bpe"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = [
    "tokenizers>=0.19",
    "datasets>=2.0",
    "numpy>=1.24",
]

[project.optional-dependencies]
viz = ["matplotlib>=3.7"]
experiments = [
    "matplotlib>=3.7",
    "scipy>=1.11",
    "tiktoken>=0.12.0",
    "transformers>=5.2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "ruff>=0.8",
]
all = ["toklens[viz,dev,experiments]"]

[project.scripts]
toklens = "toklens.cli:main"

[project.urls]
Homepage = "https://github.com/guan404ming/toklens"
Repository = "https://github.com/guan404ming/toklens"
Issues = "https://github.com/guan404ming/toklens/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/toklens"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
src = ["src"]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "RUF"]

[dependency-groups]
dev = [
    "matplotlib>=3.10.8",
    "scipy>=1.15.3",
    "statsmodels>=0.14.6",
]
